apps/media/decypharr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: decypharr
spec:
  selector:
    app.kubernetes.io/name: decypharr
  ports:
    - name: http
      port: 8282
      targetPort: http
